<resources>
    <string name="app_name">ToDo_DawidKaminski</string>
    <string name="action_browse">Browse</string>
    <string name="HomepageHeading">ToDoApp</string>
    <string name="AddNewHeading">Create New</string>
    <string name="btnCreateText">Create</string>
    <string name="itemTitle">Title:</string>
    <string name="itemStatus">Completed? </string>
    <string name="itemDescription">Description:</string>
    <string name="DetailsHeading">Details</string>
    <string name="txtButtonPrevious">Previous</string>
    <string name="txtButtonNext">Next</string>
    <string name="txtButtonDelete">Delete</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtDeleteMessage">You are about to delete the following to-do item:</string>
    <string name="action_visit">Visit</string>
    <string name="action_open_website">http://ebbi.glitch.me</string>
    <string name="txtButtonShare"> Share</string>
    <string name="datePicker">datePicker</string>
    <string name="itemDueDate">Date Due:</string>
    <string name="txtSetDate">Set</string>
</resources>
